minor revisements to nav bar, footer, removed indentation, added functionality to facebook and twitter icons

--- a/events.html
+++ b/events.html
@@ -22,23 +22,6 @@
   <script src="https://code.jquery.com/jquery-3.1.1.slim.min.js" integrity="sha384-A7FZj7v+d/sdmMqp/nOQwliLvUsJfDHW+k9Omg/a/EheAdgtzNs3hpfag6Ed950n" crossorigin="anonymous"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/tether/1.4.0/js/tether.min.js" integrity="sha384-DztdAPBWPRXSA/3eYEEUWrWCy7G5KFbe8fFjk5JAIxUYHKkDx6Qin1DkWx51bBrb" crossorigin="anonymous"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.6/js/bootstrap.min.js" integrity="sha384-vBWWzlZJ8ea9aCX4pEW3rVHjgjt7zpkNpZk+02D9phzyeVkE+jo0ieGizqPLForn" crossorigin="anonymous"></script>
-  <style>
-    .mySlides {
-      display: none
-    }
-
-    .w3-left,
-    .w3-right,
-    .w3-badge {
-      cursor: pointer
-    }
-
-    .w3-badge {
-      height: 13px;
-      width: 13px;
-      padding: 0
-    }
-  </style>
 </head>
 <body id="grad1">
   <div class="light-blue" style="margin-bottom: -20px;">
@@ -125,8 +108,8 @@
           <!-- MEMBERSHIP -->
           <li class="dropdown"><a class="btn-lg btn-link dropdown-toggle " data-toggle="dropdown" href="#" style="background-color: #425262;"><b>Membership</b></a>
             <ul class="dropdown-menu" style="margin-left: 15px;">
+			  <li><a tabindex="-1" href="join_aaup.html">Why Join Us?</a></li>
               <li><a tabindex="-1" href="https://www.aaup.org/membership/join">Join AAUP</a></li>
-              <li><a tabindex="-1" href="join_aaup.html">Why Join Us?</a></li>
             </ul>
           </li>
         </ul>
@@ -138,10 +121,10 @@
     <section>
       <div class="row">
         <div class="col-lg-12">
-          <div class="testGradient">
+<div class="testGradient">
             <h1 class="page-header" style="padding-left: 50px; font-size: 40px; font-family: 'Play', sans-serif;">
 						<span style = "font-size: 70px; font-weight: 900; color: #830303;"><b><i>CSM AAUP</i></b></span>
-						<small>Events</small>
+						<small>Why join us?</small>
 					</h1>
           </div>
         </div>
@@ -153,12 +136,13 @@
 
   <!-- FOOTER -->
   <div role="footer" style="background-color: #2b3642; height: 20px; width: 100%; min-width: 1000px;"></div>
+    <div role="footer" style="background-color: #2b3642; height: 20px; width: 100%; min-width: 1000px;"></div>
     <div class="panel-footer" style="background-color:#425262; border: none;">
-      <div class="row" style="margin-left: 15%; margin-top: 10px; margin-right: 15%; font-weight: bold; font-size:medium;">
+      <div class="row" style="margin-left: 5%; margin-top: 10px; margin-right: 5%; font-weight: bold; font-size:medium;">
         <div class="col-xs-7">
           <img src="assets/Images/aaup_nav.png" style="width:195.5px; height: 68px; float: left;" />
           <p style="float:left; position: relative; margin-left: 10px; color: #92a2bd;">
-            C/O Wendy Harrison<br> Colorado School of Mines <br> AAUP Chapter <br> 1500 Illinois Street <br> Golden, CO 80401 <br> Phone: 202-737-5900 <br><br> <span style="color: red; ">aaupcsm@gmail.com</span>
+            Colorado School of Mines <br> C/O Wendy Harrison<br> AAUP Chapter <br> 1500 Illinois Street <br> Golden, CO 80401 <br> Phone: 202-737-5900 <br><br> <span style="color: red; ">aaup@mines.edu</span>
           </p>
         </div>
         <div class="col-xs-5" style=" background-color: clear; margin-top: 0px;">
@@ -168,8 +152,8 @@
             <div style=" float: right;">
               <p>Follow AAUP</p>
               <div style=" float: right;">
-                <img src="assets/Images/facebook-icon.png" style="width: 50px; height: 50px;">
-                <img src="assets/Images/twitter-icon.png" style="width: 50px; height: 50px;">
+                <a href="https://www.facebook.com/AAUPNational/"><img src="assets/Images/facebook-icon.png" style="width: 50px; height: 50px;"></a>
+                <a href= "https://twitter.com/AAUP?ref_src=twsrc%5Egoogle%7Ctwcamp%5Eserp%7Ctwgr%5Eauthor"><img src="assets/Images/twitter-icon.png" style="width: 50px; height: 50px;"></a>
               </div>
             </div>
           </div>
