--- a/index.html
+++ b/index.html
@@ -48,6 +48,7 @@
           <!-- INFORMATION -->
           <li class="dropdown"><a class="btn-lg btn-link dropdown-toggle " data-toggle="dropdown" href="#" style="background-color: #425262; margin-right: 50px;"><b>Information</b></a>
             <ul class="dropdown-menu" style="margin-left: 15px;">
+				<li><a tabindex="-1" href="http://facultysenate.mines.edu/">Mines Faculty Senate</a></li>
               <li class="dropdown-submenu">
                 <a class="test" tabindex="-1" href="#">Constitution</a>
                 <ul class="dropdown-menu">
@@ -108,8 +109,8 @@
           <!-- MEMBERSHIP -->
           <li class="dropdown"><a class="btn-lg btn-link dropdown-toggle " data-toggle="dropdown" href="#" style="background-color: #425262;"><b>Membership</b></a>
             <ul class="dropdown-menu" style="margin-left: 15px;">
-              <li><a tabindex="-1" href="https://www.aaup.org/membership/join">Join AAUP</a></li>
               <li><a tabindex="-1" href="join_aaup.html">Why Join Us?</a></li>
+			  <li><a tabindex="-1" href="https://www.aaup.org/membership/join">Join AAUP</a></li>
             </ul>
           </li>
         </ul>
@@ -176,10 +177,10 @@
             <h1>Contact Us!</h1>
             <p> We serve the needs of all faculty and academic professionals, post‐doctoral fellows, and graduate students engaged in teaching and research. You can reach us by direct contact with any of the Chapter officers, or privately by clicking the
               "Need Help?" button below.</p>
-            <a class="btn btn-primary" style="color: white;" onclick="document.getElementById('id01').style.display='block'">Need Help! <span class="glyphicon glyphicon-chevron-right"></span></a>
-            <br>
+            <a class="btn btn-primary" style="color: white; width: 200px;" onclick="document.getElementById('id01').style.display='block'">Need Help?<span class="glyphicon glyphicon-chevron-right" style="float: right;"></span></a>
+            <br><br>
             <p> You are also welcome to join the meetings for Faculty Senate. The Faculty Senate promotes cooperation and understanding among the various constituencies that comprise the school.</p>
-			<p>Click <a href="http://facultysenate.mines.edu/"><u>Here (Faculty Senate Page)</u></a>              for more information!</p>
+			<p>Click <a href="http://facultysenate.mines.edu/"><u>Here (Faculty Senate Page)</u></a>for more information!</p>
             <div id="id01" class="modal">
               <form class="modal-content animate">
                 <div class="container containerBorder">
@@ -221,11 +222,11 @@
     <!-- FOOTER -->
     <div role="footer" style="background-color: #2b3642; height: 20px; width: 100%; min-width: 1000px;"></div>
     <div class="panel-footer" style="background-color:#425262; border: none;">
-      <div class="row" style="margin-left: 15%; margin-top: 10px; margin-right: 15%; font-weight: bold; font-size:medium;">
+      <div class="row" style="margin-left: 5%; margin-top: 10px; margin-right: 5%; font-weight: bold; font-size:medium;">
         <div class="col-xs-7">
           <img src="assets/Images/aaup_nav.png" style="width:195.5px; height: 68px; float: left;" />
           <p style="float:left; position: relative; margin-left: 10px; color: #92a2bd;">
-            C/O Wendy Harrison<br> Colorado School of Mines <br> AAUP Chapter <br> 1500 Illinois Street <br> Golden, CO 80401 <br> Phone: 202-737-5900 <br><br> <span style="color: red; ">aaupcsm@gmail.com</span>
+            Colorado School of Mines <br> C/O Wendy Harrison<br> AAUP Chapter <br> 1500 Illinois Street <br> Golden, CO 80401 <br> Phone: 202-737-5900 <br><br> <span style="color: red; ">aaup@mines.edu</span>
           </p>
         </div>
         <div class="col-xs-5" style=" background-color: clear; margin-top: 0px;">
@@ -235,8 +236,8 @@
             <div style=" float: right;">
               <p>Follow AAUP</p>
               <div style=" float: right;">
-                <img src="assets/Images/facebook-icon.png" style="width: 50px; height: 50px;">
-                <img src="assets/Images/twitter-icon.png" style="width: 50px; height: 50px;">
+                <a href="https://www.facebook.com/AAUPNational/"><img src="assets/Images/facebook-icon.png" style="width: 50px; height: 50px;"></a>
+                <a href= "https://twitter.com/AAUP?ref_src=twsrc%5Egoogle%7Ctwcamp%5Eserp%7Ctwgr%5Eauthor"><img src="assets/Images/twitter-icon.png" style="width: 50px; height: 50px;"></a>
               </div>
             </div>
           </div>
