--- a/leaders.html
+++ b/leaders.html
@@ -109,8 +109,8 @@
           <!-- MEMBERSHIP -->
           <li class="dropdown"><a class="btn-lg btn-link dropdown-toggle " data-toggle="dropdown" href="#" style="background-color: #425262;"><b>Membership</b></a>
             <ul class="dropdown-menu" style="margin-left: 15px;">
+			  <li><a tabindex="-1" href="join_aaup.html">Why Join Us?</a></li>
               <li><a tabindex="-1" href="https://www.aaup.org/membership/join">Join AAUP</a></li>
-              <li><a tabindex="-1" href="join_aaup.html">Why Join Us?</a></li>
             </ul>
           </li>
         </ul>
@@ -136,7 +136,7 @@
         <div class="row">
           <div class="col-md-4">
             <a href="#">
-                    <img class="img-responsive" src="assets/Facultyimages/wendy.jpg" alt="" style = "padding-left: 50px; height: 250px;">
+                    <img class="img-responsive" src="assets/FacultyImages/wendy.jpg" alt="" style = "padding-left: 50px; height: 250px;">
                 </a>
           </div>
           <div class="col-md-8">
@@ -151,13 +151,13 @@
         <div class="row">
           <div class="col-md-4">
             <a href="#">
-                    <img class="img-responsive" src="assets/Facultyimages/marcelo.png" alt="" style = "padding-left: 50px; height: 250px;">
+                    <img class="img-responsive" src="assets/FacultyImages/marcelo.png" alt="" style = "padding-left: 50px; height: 250px;">
                 </a>
           </div>
           <div class="col-md-8">
-            <h2><b>Marcelo Godoy Simões</b></h2>
+            <h2><b>Marcelo Simões</b></h2>
             <h4><b>Chapter Vice President</b><br></h4>
-            <p> Professor of Electrical Engineering<br> Department of Electrical Engineering<br> Phone: (303) 384-2350<br> Email: msimoes@mines.edu</p>
+            <p> Professor of Electrical Engineering<br>Electrical Engineering Department<br> Phone: (303) 384-2350<br> Email: msimoes@mines.edu</p>
             <a class="btn btn-primary" href="http://inside.mines.edu/~msimoes/publications.html">Personal Website <span class="glyphicon glyphicon-chevron-right"></span></a>
           </div>
         </div>
@@ -166,7 +166,7 @@
         <div class="row">
           <div class="col-md-4">
             <a href="#">
-                    <img class="img-responsive" src="assets/Facultyimages/Lisa_N_LibGuide.jpg" alt="" style = "padding-left: 50px; height: 250px;">
+                    <img class="img-responsive" src="assets/FacultyImages/Lisa_N_LibGuide.jpg" alt="" style = "padding-left: 50px; height: 250px;">
                 </a>
           </div>
           <div class="col-md-8">
@@ -182,7 +182,7 @@
         <div class="row">
           <div class="col-md-4">
             <a href="#">
-                    <img class="img-responsive" src="assets/Facultyimages/uweGreife.jpg" alt="" style = "padding-left: 50px; height: 250px;">
+                    <img class="img-responsive" src="assets/FacultyImages/uweGreife.jpg" alt="" style = "padding-left: 50px; height: 250px;">
                 </a>
           </div>
           <div class="col-md-8">
@@ -198,7 +198,7 @@
         <div class="row">
           <div class="col-md-4">
             <a href="#">
-                    <img class="img-responsive" src="assets/Facultyimages/chuck.jpg" alt="" style = "padding-left: 50px; height: 250px;">
+                    <img class="img-responsive" src="assets/FacultyImages/chuck.jpg" alt="" style = "padding-left: 50px; height: 250px;">
                 </a>
           </div>
           <div class="col-md-8">
@@ -215,12 +215,13 @@
   </div>
   <!-- FOOTER -->
   <div role="footer" style="background-color: #2b3642; height: 20px; width: 100%; min-width: 1000px;"></div>
+       <div role="footer" style="background-color: #2b3642; height: 20px; width: 100%; min-width: 1000px;"></div>
     <div class="panel-footer" style="background-color:#425262; border: none;">
-      <div class="row" style="margin-left: 15%; margin-top: 10px; margin-right: 15%; font-weight: bold; font-size:medium;">
+      <div class="row" style="margin-left: 5%; margin-top: 10px; margin-right: 5%; font-weight: bold; font-size:medium;">
         <div class="col-xs-7">
           <img src="assets/Images/aaup_nav.png" style="width:195.5px; height: 68px; float: left;" />
           <p style="float:left; position: relative; margin-left: 10px; color: #92a2bd;">
-            C/O Wendy Harrison<br> Colorado School of Mines <br> AAUP Chapter <br> 1500 Illinois Street <br> Golden, CO 80401 <br> Phone: 202-737-5900 <br><br> <span style="color: red; ">aaupcsm@gmail.com</span>
+            Colorado School of Mines <br> C/O Wendy Harrison<br> AAUP Chapter <br> 1500 Illinois Street <br> Golden, CO 80401 <br> Phone: 202-737-5900 <br><br> <span style="color: red; ">aaup@mines.edu</span>
           </p>
         </div>
         <div class="col-xs-5" style=" background-color: clear; margin-top: 0px;">
@@ -230,8 +231,8 @@
             <div style=" float: right;">
               <p>Follow AAUP</p>
               <div style=" float: right;">
-                <img src="assets/Images/facebook-icon.png" style="width: 50px; height: 50px;">
-                <img src="assets/Images/twitter-icon.png" style="width: 50px; height: 50px;">
+                <a href="https://www.facebook.com/AAUPNational/"><img src="assets/Images/facebook-icon.png" style="width: 50px; height: 50px;"></a>
+                <a href= "https://twitter.com/AAUP?ref_src=twsrc%5Egoogle%7Ctwcamp%5Eserp%7Ctwgr%5Eauthor"><img src="assets/Images/twitter-icon.png" style="width: 50px; height: 50px;"></a>
               </div>
             </div>
           </div>
