--- a/news.html
+++ b/news.html
@@ -138,8 +138,8 @@ $(document).ready(function(){
 <!-- MEMBERSHIP -->		
 				<li class="dropdown"><a class="btn-lg btn-link dropdown-toggle " data-toggle="dropdown" href="#" style ="background-color: #425262;"><b>Membership</b></a>
 					<ul class="dropdown-menu" style="margin-left: 15px;">
-						<li><a tabindex="-1" href="https://www.aaup.org/membership/join">Why Join Us?</a></li>
-						<li><a tabindex="-1" href="join_aaup.html">Join AAUP</a></li>
+			  <li><a tabindex="-1" href="join_aaup.html">Why Join Us?</a></li>
+              <li><a tabindex="-1" href="https://www.aaup.org/membership/join">Join AAUP</a></li>
 					</ul>
 				</li>
 
@@ -161,12 +161,13 @@ $(document).ready(function(){
 </section>
 </div>
 
+    <div role="footer" style="background-color: #2b3642; height: 20px; width: 100%; min-width: 1000px;"></div>
     <div class="panel-footer" style="background-color:#425262; border: none;">
-      <div class="row" style="margin-left: 15%; margin-top: 10px; margin-right: 15%; font-weight: bold; font-size:medium;">
+      <div class="row" style="margin-left: 5%; margin-top: 10px; margin-right: 5%; font-weight: bold; font-size:medium;">
         <div class="col-xs-7">
           <img src="assets/Images/aaup_nav.png" style="width:195.5px; height: 68px; float: left;" />
           <p style="float:left; position: relative; margin-left: 10px; color: #92a2bd;">
-            C/O Wendy Harrison<br> Colorado School of Mines <br> AAUP Chapter <br> 1500 Illinois Street <br> Golden, CO 80401 <br> Phone: 202-737-5900 <br><br> <span style="color: red; ">aaupcsm@gmail.com</span>
+            Colorado School of Mines <br> C/O Wendy Harrison<br> AAUP Chapter <br> 1500 Illinois Street <br> Golden, CO 80401 <br> Phone: 202-737-5900 <br><br> <span style="color: red; ">aaup@mines.edu</span>
           </p>
         </div>
         <div class="col-xs-5" style=" background-color: clear; margin-top: 0px;">
@@ -176,8 +177,8 @@ $(document).ready(function(){
             <div style=" float: right;">
               <p>Follow AAUP</p>
               <div style=" float: right;">
-                <img src="assets/Images/facebook-icon.png" style="width: 50px; height: 50px;">
-                <img src="assets/Images/twitter-icon.png" style="width: 50px; height: 50px;">
+                <a href="https://www.facebook.com/AAUPNational/"><img src="assets/Images/facebook-icon.png" style="width: 50px; height: 50px;"></a>
+                <a href= "https://twitter.com/AAUP?ref_src=twsrc%5Egoogle%7Ctwcamp%5Eserp%7Ctwgr%5Eauthor"><img src="assets/Images/twitter-icon.png" style="width: 50px; height: 50px;"></a>
               </div>
             </div>
           </div>
