fixed help box and fixed header box for evetns page

--- a/index.html
+++ b/index.html
@@ -181,7 +181,7 @@
             <br><br>
             <p> You are also welcome to join the meetings for Faculty Senate. The Faculty Senate promotes cooperation and understanding among the various constituencies that comprise the school.</p>
 			<p>Click <a href="http://facultysenate.mines.edu/"><u>Here (Faculty Senate Page)</u></a>for more information!</p>
-            <div id="id01" class="modal">
+            <div id="id01" class="modal" style="background-color: none;">
               <form class="modal-content animate">
                 <div class="container containerBorder">
                   <div class="imgcontainer">
