--- a/events.html
+++ b/events.html
@@ -124,7 +124,7 @@
 <div class="testGradient">
             <h1 class="page-header" style="padding-left: 50px; font-size: 40px; font-family: 'Play', sans-serif;">
 						<span style = "font-size: 70px; font-weight: 900; color: #830303;"><b><i>CSM AAUP</i></b></span>
-						<small>Why join us?</small>
+						<small>Events</small>
 					</h1>
           </div>
         </div>
