added 2 photos(one library) placed into purpose and why join us, changed CSM to Mines, set index coursel to 8 secounds and made links open to a new page

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="UTF-8">
-  <title>CSM AAUP</title>
+  <title>Colorado School of Mines AAUP</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
@@ -41,22 +41,22 @@
           <!-- NEWS AND EVENTS -->
           <li class="dropdown"><a class="btn-lg btn-link dropdown-toggle " data-toggle="dropdown" href="#" style="background-color: #425262; margin-right: 50px;"><b>News + Events</b></a>
             <ul class="dropdown-menu" style="margin-left: 15px;">
-              <li><a tabindex="-1" href="https://www.aaup.org/news/aaup-news">News</a></li>
+              <li><a tabindex="-1" href="https://www.aaup.org/news/aaup-news"  target="_blank">News</a></li>
               <li><a tabindex="-1" href="events.html">Events</a></li>
             </ul>
           </li>
           <!-- INFORMATION -->
           <li class="dropdown"><a class="btn-lg btn-link dropdown-toggle " data-toggle="dropdown" href="#" style="background-color: #425262; margin-right: 50px;"><b>Information</b></a>
             <ul class="dropdown-menu" style="margin-left: 15px;">
-				<li><a tabindex="-1" href="http://facultysenate.mines.edu/">Mines Faculty Senate</a></li>
+				<li><a tabindex="-1" href="http://facultysenate.mines.edu/"  target="_blank">Mines Faculty Senate</a></li>
               <li class="dropdown-submenu">
                 <a class="test" tabindex="-1" href="#">Constitution</a>
                 <ul class="dropdown-menu">
                   <div class="dropdown-divider"></div>
                   <a style="padding-left: 50px;"><b>External Links</b></a>
                   <div class="dropdown-divider"></div>
-                  <li><a tabindex="-1" href="https://aaupcolorado.org/constitution-2/">AAUP Colorado Constitution</a></li>
-                  <li><a tabindex="-1" href="https://www.aaup.org/about/organization/aaup-constitution">AAUP National Constitution</a></li>
+                  <li><a tabindex="-1" href="https://aaupcolorado.org/constitution-2/" target="_blank">AAUP Colorado Constitution</a></li>
+                  <li><a tabindex="-1" href="https://www.aaup.org/about/organization/aaup-constitution" target="_blank">AAUP National Constitution</a></li>
                 </ul>
               </li>
               <li class="dropdown-submenu">
@@ -65,9 +65,9 @@
                   <div class="dropdown-divider"></div>
                   <a style="padding-left: 50px;"><b>External Links</b></a>
                   <div class="dropdown-divider"></div>
-                  <li class="disabled"><a tabindex="-1" href="https://www.aaup.org/about/organization/aaup-constitution">CSM Bylaws (Coming Soon)</a></li>
-                  <li><a tabindex="-1" href="https://www.aaup.org/get-involved/start-chapter/sample-bylaws">Sample Bylaws</a></li>
-                  <li><a tabindex="-1" href="https://www.aaup.org/about/organization/aaup-constitution">AAUP National Constitution</a></li>
+                  <li class="disabled"><a tabindex="-1" href="https://www.aaup.org/about/organization/aaup-constitution">Mines Bylaws (Coming Soon)</a></li>
+                  <li><a tabindex="-1" href="https://www.aaup.org/get-involved/start-chapter/sample-bylaws" target="_blank">Sample Bylaws</a></li>
+                  <li><a tabindex="-1" href="https://www.aaup.org/about/organization/aaup-constitution" target="_blank">AAUP National Constitution</a></li>
                 </ul>
               </li>
               <li class="dropdown-submenu">
@@ -76,10 +76,10 @@
                   <div class="dropdown-divider"></div>
                   <a style="padding-left: 50px;"><b>External Links</b></a>
                   <div class="dropdown-divider"></div>
-                  <li><a tabindex="-1" href="https://aaupcolorado.org/law/">law on Non-Tenure Track Teaching Contracts</a></li>
-                  <li><a tabindex="-1" href="https://www.nlrb.gov/resources/national-labor-relations-act">National Labor Relations Act</a></li>
-                  <li><a tabindex="-1" href="https://www.aaup.org/issues-higher-education">AAUP Issues in Higher Education</a></li>
-                  <li><a tabindex="-1" href="https://www.aaup.org/our-programs">AAUP Programs</a></li>
+                  <li><a tabindex="-1" href="https://aaupcolorado.org/law/" target="_blank">law on Non-Tenure Track Teaching Contracts</a></li>
+                  <li><a tabindex="-1" href="https://www.nlrb.gov/resources/national-labor-relations-act" target="_blank">National Labor Relations Act</a></li>
+                  <li><a tabindex="-1" href="https://www.aaup.org/issues-higher-education" target="_blank">AAUP Issues in Higher Education</a></li>
+                  <li><a tabindex="-1" href="https://www.aaup.org/our-programs" target="_blank">AAUP Programs</a></li>
                 </ul>
               </li>
               <li class="dropdown-submenu">
@@ -88,13 +88,13 @@
                   <div class="dropdown-divider"></div>
                   <a style="padding-left: 50px;"><b>External Links</b></a>
                   <div class="dropdown-divider"></div>
-                  <li><a tabindex="-1" href="https://www.aaup.org/">AAUP - National</a></li>
-                  <li><a tabindex="-1" href="https://www.aaup.org/reports-publications/journal-academic-freedom">AAUP Journal of Academic Freedom</a></li>
-                  <li><a tabindex="-1" href="http://portfolio.du.edu/aaup">University Of Denver Chapter</a></li>
-                  <li><a tabindex="-1" href="https://aaupcsu.org/">Colorado State University - Fort Collins Chapter</a></li>
-                  <li><a tabindex="-1" href="https://sites.google.com/site/coloradoadjunctswiki/">Colorado Community College Chapter</a></li>
-                  <li><a tabindex="-1" href="http://aaup-msudenver.org/">Metropolitan State University Chapter</a></li>
-                  <li><a tabindex="-1" href="http://www.cu-aaup.org/">University of Colorado- Boulder Chapter</a></li>
+                  <li><a tabindex="-1" href="https://www.aaup.org/" target="_blank">AAUP - National</a></li>
+                  <li><a tabindex="-1" href="https://www.aaup.org/reports-publications/journal-academic-freedom" target="_blank">AAUP Journal of Academic Freedom</a></li>
+                  <li><a tabindex="-1" href="http://portfolio.du.edu/aaup" target="_blank">University Of Denver Chapter</a></li>
+                  <li><a tabindex="-1" href="https://aaupcsu.org/" target="_blank">Colorado State University - Fort Collins Chapter</a></li>
+                  <li><a tabindex="-1" href="https://sites.google.com/site/coloradoadjunctswiki/" target="_blank">Colorado Community College Chapter</a></li>
+                  <li><a tabindex="-1" href="http://aaup-msudenver.org/" target="_blank">Metropolitan State University Chapter</a></li>
+                  <li><a tabindex="-1" href="http://www.cu-aaup.org/" target="_blank">University of Colorado- Boulder Chapter</a></li>
                 </ul>
               </li>
             </ul>
@@ -102,7 +102,7 @@
           <!-- WHO WE ARE -->
           <li class="dropdown"><a class="btn-lg btn-link dropdown-toggle " data-toggle="dropdown" href="#" style="background-color: #425262; margin-right: 50px;"><b>Who We Are</b></a>
             <ul class="dropdown-menu" style="margin-left: 15px;">
-              <li><a tabindex="-1" href="leaders.html">CSM AAUP Leadership</a></li>
+              <li><a tabindex="-1" href="leaders.html">Mines AAUP Leadership</a></li>
               <li><a tabindex="-1" href="our_purpose.html">Our Purpose</a></li>
             </ul>
           </li>
@@ -110,7 +110,7 @@
           <li class="dropdown"><a class="btn-lg btn-link dropdown-toggle " data-toggle="dropdown" href="#" style="background-color: #425262;"><b>Membership</b></a>
             <ul class="dropdown-menu" style="margin-left: 15px;">
               <li><a tabindex="-1" href="join_aaup.html">Why Join Us?</a></li>
-			  <li><a tabindex="-1" href="https://www.aaup.org/membership/join">Join AAUP</a></li>
+			  <li><a tabindex="-1" href="https://www.aaup.org/membership/join" target="_blank">Join AAUP</a></li>
             </ul>
           </li>
         </ul>
@@ -165,11 +165,11 @@
             <p>The American Association of University Professors (AAUP) is a nonprofit membership association of faculty and other academic professionals. Its mission is to advance academic freedom and shared governance; to define fundamental professional
               values and standards for higher education; to promote the economic security of faculty, academic professionals, graduate students, post‐doctoral fellows, and all those engaged in teaching and research in higher education; to help the higher
               education community organize to make our goals a reality; and to ensure higher education's contribution to the common good.</p>
-            <p>Read more about AAUP <a href="https://www.aaup.org/about-aaup"><u>Here</u></a> </p>
+            <p>Read more about AAUP <a href="https://www.aaup.org/about-aaup" target="_blank"><u>Here</u></a> </p>
           </div>
           <div class="col-md-4">
-            <h1>CSM Chapter of AAUP</h1>
-            <p>CSM has a recognized Chapter of AAUP – one of more than 500 local groups that serve accredited colleges and universities. We promote basic academic freedom, quality education, and other core AAUP principles and belong to the Colorado Conference
+            <h1>Mines Chapter of AAUP</h1>
+            <p>Colorado School of Mines has a recognized Chapter of AAUP – one of more than 500 local groups that serve accredited colleges and universities. We promote basic academic freedom, quality education, and other core AAUP principles and belong to the Colorado Conference
               (https://aaupcolorado.org/). We encourage you to learn more about AAUP and become a member. Regardless of formal membership, however, you are welcome to participate in our Chapter activities. We serve the needs of all faculty and academic
               professionals, post‐doctoral fellows, and graduate students engaged in teaching and research and you can reach us by direct contact with any of the Chapter officers, or privately through our “Need Help” service.</p>
           </div>
@@ -180,7 +180,7 @@
             <a class="btn btn-primary" style="color: white; width: 200px;" onclick="document.getElementById('id01').style.display='block'">Need Help?<span class="glyphicon glyphicon-chevron-right" style="float: right;"></span></a>
             <br><br>
             <p> You are also welcome to join the meetings for Faculty Senate. The Faculty Senate promotes cooperation and understanding among the various constituencies that comprise the school.</p>
-			<p>Click <a href="http://facultysenate.mines.edu/"><u>Here (Faculty Senate Page)</u></a>for more information!</p>
+			<p>Click <a href="http://facultysenate.mines.edu/" target="_blank"><u>Here (Faculty Senate Page)</u></a>for more information!</p>
             <div id="id01" class="modal" style="background-color: none;">
               <form class="modal-content animate">
                 <div class="container containerBorder">
@@ -226,18 +226,19 @@
         <div class="col-xs-7">
           <img src="assets/Images/aaup_nav.png" style="width:195.5px; height: 68px; float: left;" />
           <p style="float:left; position: relative; margin-left: 10px; color: #92a2bd;">
-            Colorado School of Mines <br> C/O Wendy Harrison<br> AAUP Chapter <br> 1500 Illinois Street <br> Golden, CO 80401 <br> Phone: 202-737-5900 <br><br> <span style="color: red; ">aaup@mines.edu</span>
+            Colorado School of Mines <br> C/O Wendy Harrison<br> AAUP Chapter <br> 1500 Illinois Street <br> Golden, CO 80401 <br> Phone: 303-737-5900
           </p>
         </div>
         <div class="col-xs-5" style=" background-color: clear; margin-top: 0px;">
-          <a class="buttonFooter buttonFooter1 buttonFooterHover" href="https://www.aaup.org/">Visit AAUP</a>
-          <a class="buttonFooter buttonFooter2 buttonFooterHover" href="https://aaupcolorado.org/">Visit AAUP of Colorado</a>
+          <a class="buttonFooter buttonFooter1 buttonFooterHover" href="https://www.aaup.org/" target="_blank">Visit AAUP</a>
+          <a class="buttonFooter buttonFooter2 buttonFooterHover" href="https://aaupcolorado.org/" target="_blank">Visit AAUP of Colorado</a>
           <div style="color: #6b7b8b; margin-right: 10px; width: 300px; float: right;">
+		   <span style="color: white; float: left;"><span style="color: #6b7b8b;">Email:</span> aaup@mines.edu</span>
             <div style=" float: right;">
               <p>Follow AAUP</p>
               <div style=" float: right;">
-                <a href="https://www.facebook.com/AAUPNational/"><img src="assets/Images/facebook-icon.png" style="width: 50px; height: 50px;"></a>
-                <a href= "https://twitter.com/AAUP?ref_src=twsrc%5Egoogle%7Ctwcamp%5Eserp%7Ctwgr%5Eauthor"><img src="assets/Images/twitter-icon.png" style="width: 50px; height: 50px;"></a>
+                <a href="https://www.facebook.com/AAUPNational/" target="_blank"><img src="assets/Images/facebook-icon.png" style="width: 50px; height: 50px;"></a>
+                <a href= "https://twitter.com/AAUP?ref_src=twsrc%5Egoogle%7Ctwcamp%5Eserp%7Ctwgr%5Eauthor" target="_blank"><img src="assets/Images/twitter-icon.png" style="width: 50px; height: 50px;"></a>
               </div>
             </div>
           </div>
