--- a/leaders.html
+++ b/leaders.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="UTF-8">
-  <title>CSM AAUP</title>
+  <title>Colorado School Of Mines AAUP</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
@@ -42,7 +42,7 @@
           <!-- NEWS AND EVENTS -->
           <li class="dropdown"><a class="btn-lg btn-link dropdown-toggle " data-toggle="dropdown" href="#" style="background-color: #425262; margin-right: 50px;"><b>News + Events</b></a>
             <ul class="dropdown-menu" style="margin-left: 15px;">
-              <li><a tabindex="-1" href="https://www.aaup.org/news/aaup-news">News</a></li>
+              <li><a tabindex="-1" href="https://www.aaup.org/news/aaup-news" target="_blank">News</a></li>
               <li><a tabindex="-1" href="events.html">Events</a></li>
             </ul>
           </li>
@@ -55,8 +55,8 @@
                   <div class="dropdown-divider"></div>
                   <a style="padding-left: 50px;"><b>External Links</b></a>
                   <div class="dropdown-divider"></div>
-                  <li><a tabindex="-1" href="https://aaupcolorado.org/constitution-2/">AAUP Colorado Constitution</a></li>
-                  <li><a tabindex="-1" href="https://www.aaup.org/about/organization/aaup-constitution">AAUP National Constitution</a></li>
+                  <li><a tabindex="-1" href="https://aaupcolorado.org/constitution-2/" target="_blank">AAUP Colorado Constitution</a></li>
+                  <li><a tabindex="-1" href="https://www.aaup.org/about/organization/aaup-constitution" target="_blank">AAUP National Constitution</a></li>
                 </ul>
               </li>
               <li class="dropdown-submenu">
@@ -65,9 +65,9 @@
                   <div class="dropdown-divider"></div>
                   <a style="padding-left: 50px;"><b>External Links</b></a>
                   <div class="dropdown-divider"></div>
-                  <li class="disabled"><a tabindex="-1" href="https://www.aaup.org/about/organization/aaup-constitution">CSM Bylaws (Coming Soon)</a></li>
-                  <li><a tabindex="-1" href="https://www.aaup.org/get-involved/start-chapter/sample-bylaws">Sample Bylaws</a></li>
-                  <li><a tabindex="-1" href="https://www.aaup.org/about/organization/aaup-constitution">AAUP National Constitution</a></li>
+                  <li class="disabled"><a tabindex="-1" href="https://www.aaup.org/about/organization/aaup-constitution">Mines Bylaws (Coming Soon)</a></li>
+                  <li><a tabindex="-1" href="https://www.aaup.org/get-involved/start-chapter/sample-bylaws" target="_blank">Sample Bylaws</a></li>
+                  <li><a tabindex="-1" href="https://www.aaup.org/about/organization/aaup-constitution" target="_blank">AAUP National Constitution</a></li>
                 </ul>
               </li>
               <li class="dropdown-submenu">
@@ -76,10 +76,10 @@
                   <div class="dropdown-divider"></div>
                   <a style="padding-left: 50px;"><b>External Links</b></a>
                   <div class="dropdown-divider"></div>
-                  <li><a tabindex="-1" href="https://aaupcolorado.org/law/">law on Non-Tenure Track Teaching Contracts</a></li>
-                  <li><a tabindex="-1" href="https://www.nlrb.gov/resources/national-labor-relations-act">National Labor Relations Act</a></li>
-                  <li><a tabindex="-1" href="https://www.aaup.org/issues-higher-education">AAUP Issues in Higher Education</a></li>
-                  <li><a tabindex="-1" href="https://www.aaup.org/our-programs">AAUP Programs</a></li>
+                  <li><a tabindex="-1" href="https://aaupcolorado.org/law/" target="_blank">law on Non-Tenure Track Teaching Contracts</a></li>
+                  <li><a tabindex="-1" href="https://www.nlrb.gov/resources/national-labor-relations-act" target="_blank">National Labor Relations Act</a></li>
+                  <li><a tabindex="-1" href="https://www.aaup.org/issues-higher-education" target="_blank">AAUP Issues in Higher Education</a></li>
+                  <li><a tabindex="-1" href="https://www.aaup.org/our-programs" target="_blank">AAUP Programs</a></li>
                 </ul>
               </li>
               <li class="dropdown-submenu">
@@ -88,13 +88,13 @@
                   <div class="dropdown-divider"></div>
                   <a style="padding-left: 50px;"><b>External Links</b></a>
                   <div class="dropdown-divider"></div>
-                  <li><a tabindex="-1" href="https://www.aaup.org/">AAUP - National</a></li>
-                  <li><a tabindex="-1" href="https://www.aaup.org/reports-publications/journal-academic-freedom">AAUP Journal of Academic Freedom</a></li>
-                  <li><a tabindex="-1" href="http://portfolio.du.edu/aaup">University Of Denver Chapter</a></li>
-                  <li><a tabindex="-1" href="https://aaupcsu.org/">Colorado State University - Fort Collins Chapter</a></li>
-                  <li><a tabindex="-1" href="https://sites.google.com/site/coloradoadjunctswiki/">Colorado Community College Chapter</a></li>
-                  <li><a tabindex="-1" href="http://aaup-msudenver.org/">Metropolitan State University Chapter</a></li>
-                  <li><a tabindex="-1" href="http://www.cu-aaup.org/">University of Colorado- Boulder Chapter</a></li>
+                  <li><a tabindex="-1" href="https://www.aaup.org/" target="_blank">AAUP - National</a></li>
+                  <li><a tabindex="-1" href="https://www.aaup.org/reports-publications/journal-academic-freedom" target="_blank">AAUP Journal of Academic Freedom</a></li>
+                  <li><a tabindex="-1" href="http://portfolio.du.edu/aaup" target="_blank">University Of Denver Chapter</a></li>
+                  <li><a tabindex="-1" href="https://aaupcsu.org/" target="_blank">Colorado State University - Fort Collins Chapter</a></li>
+                  <li><a tabindex="-1" href="https://sites.google.com/site/coloradoadjunctswiki/" target="_blank">Colorado Community College Chapter</a></li>
+                  <li><a tabindex="-1" href="http://aaup-msudenver.org/" target="_blank">Metropolitan State University Chapter</a></li>
+                  <li><a tabindex="-1" href="http://www.cu-aaup.org/" target="_blank">University of Colorado- Boulder Chapter</a></li>
                 </ul>
               </li>
             </ul>
@@ -102,7 +102,7 @@
           <!-- WHO WE ARE -->
           <li class="dropdown"><a class="btn-lg btn-link dropdown-toggle " data-toggle="dropdown" href="#" style="background-color: #D2492A; margin-right: 50px;"><b>Who We Are</b></a>
             <ul class="dropdown-menu" style="margin-left: 15px;">
-              <li><a tabindex="-1" href="leaders.html">CSM AAUP Leadership</a></li>
+              <li><a tabindex="-1" href="leaders.html">Mines AAUP Leadership</a></li>
               <li><a tabindex="-1" href="our_purpose.html">Our Purpose</a></li>
             </ul>
           </li>
@@ -110,7 +110,7 @@
           <li class="dropdown"><a class="btn-lg btn-link dropdown-toggle " data-toggle="dropdown" href="#" style="background-color: #425262;"><b>Membership</b></a>
             <ul class="dropdown-menu" style="margin-left: 15px;">
 			  <li><a tabindex="-1" href="join_aaup.html">Why Join Us?</a></li>
-              <li><a tabindex="-1" href="https://www.aaup.org/membership/join">Join AAUP</a></li>
+              <li><a tabindex="-1" href="https://www.aaup.org/membership/join" target="_blank">Join AAUP</a></li>
             </ul>
           </li>
         </ul>
@@ -125,7 +125,7 @@
         <div class="col-lg-12">
           <div class="testGradient">
             <h1 class="page-header" style="margin-left: 50px; font-size: 40px; font-family: 'Play', sans-serif;">
-						<span style = "font-size: 70px; font-weight: 900; color: #830303;"><b><i>CSM AAUP</i></b></span>
+						<span style = "font-size: 70px; font-weight: 900; color: #830303;"><b><i>MINES AAUP</i></b></span>
 						<small>Leadership</small>
 					</h1>
           </div>
@@ -142,8 +142,8 @@
           <div class="col-md-8">
             <h2><b>Wendy Harrison</b></h2>
             <h4><b>Chapter President</b> </h4>
-            <p> Professor Geochemistry <br> Department of Geology and Geological Engineering <br> Phone: (+1) 303-273-3821 <br> Fax: (+1) 303-273-3859<br> Email: wharriso@mines.edu</p>
-            <a class="btn btn-primary" href="http://inside.mines.edu/Wendy-Harrison">Personal Website <span class="glyphicon glyphicon-chevron-right"></span></a>
+            <p> Professor of Geology and Geological Engineering <br> Department of Geology and Geological Engineering <br> Phone: (+1) 303-273-3821 <br> Fax: (+1) 303-273-3859<br> Email: wharriso@mines.edu</p>
+            <a class="btn btn-primary" href="http://inside.mines.edu/Wendy-Harrison" target="_blank">Personal Website <span class="glyphicon glyphicon-chevron-right"></span></a>
           </div>
         </div>
         <hr>
@@ -158,7 +158,7 @@
             <h2><b>Marcelo Simões</b></h2>
             <h4><b>Chapter Vice President</b><br></h4>
             <p> Professor of Electrical Engineering<br>Electrical Engineering Department<br> Phone: (303) 384-2350<br> Email: msimoes@mines.edu</p>
-            <a class="btn btn-primary" href="http://inside.mines.edu/~msimoes/publications.html">Personal Website <span class="glyphicon glyphicon-chevron-right"></span></a>
+            <a class="btn btn-primary" href="http://inside.mines.edu/~msimoes/publications.html" target="_blank">Personal Website <span class="glyphicon glyphicon-chevron-right"></span></a>
           </div>
         </div>
         <hr>
@@ -174,7 +174,7 @@
             <h4><b>Library Faculty Representative</b></h4>
             <p>Associate Librarian<br> Phone: 303-273-3695 <br> Email: lnickum@mines.edu</p>
             </p>
-            <a class="btn btn-primary" href="http://libguides.mines.edu/prf.php?account_id=113539">Personal Website <span class="glyphicon glyphicon-chevron-right"></span></a>
+            <a class="btn btn-primary" href="http://libguides.mines.edu/prf.php?account_id=113539" target="_blank">Personal Website <span class="glyphicon glyphicon-chevron-right"></span></a>
           </div>
         </div>
         <hr>
@@ -190,7 +190,7 @@
             <h4>
 					<b>Chapter Secretary and Treasurer</b><br></h4>
             <p>Professor of Physics<br> Department of Physics<br> Phone: (303) 273-3618<br> Email: ugreife@mines.edu</p>
-            <a class="btn btn-primary" href="http://inside.mines.edu/~ugreife/UGResearchMain.html">Personal Website <span class="glyphicon glyphicon-chevron-right"></span></a>
+            <a class="btn btn-primary" href="http://inside.mines.edu/~ugreife/UGResearchMain.html" target="_blank">Personal Website <span class="glyphicon glyphicon-chevron-right"></span></a>
           </div>
         </div>
         <hr>
@@ -206,7 +206,7 @@
             <h4><b>Teaching Professors’ Representative</b></h4>
             <p>Teaching Professor<br> Department of Physics<br> Phone: (303) 273-3762<br> Email: cstone@mines.edu</p>
             </p>
-            <a class="btn btn-primary" href="http://inside.mines.edu/PH-charles-chuck-stone">Personal Website <span class="glyphicon glyphicon-chevron-right"></span></a>
+            <a class="btn btn-primary" href="http://inside.mines.edu/PH-charles-chuck-stone" target="_blank">Personal Website <span class="glyphicon glyphicon-chevron-right"></span></a>
           </div>
         </div>
         <hr>
@@ -221,18 +221,19 @@
         <div class="col-xs-7">
           <img src="assets/Images/aaup_nav.png" style="width:195.5px; height: 68px; float: left;" />
           <p style="float:left; position: relative; margin-left: 10px; color: #92a2bd;">
-            Colorado School of Mines <br> C/O Wendy Harrison<br> AAUP Chapter <br> 1500 Illinois Street <br> Golden, CO 80401 <br> Phone: 202-737-5900 <br><br> <span style="color: red; ">aaup@mines.edu</span>
+            Colorado School of Mines <br> C/O Wendy Harrison<br> AAUP Chapter <br> 1500 Illinois Street <br> Golden, CO 80401 <br> Phone: 303-737-5900
           </p>
         </div>
         <div class="col-xs-5" style=" background-color: clear; margin-top: 0px;">
-          <a class="buttonFooter buttonFooter1 buttonFooterHover" href="https://www.aaup.org/">Visit AAUP</a>
-          <a class="buttonFooter buttonFooter2 buttonFooterHover" href="https://aaupcolorado.org/">Visit AAUP of Colorado</a>
+          <a class="buttonFooter buttonFooter1 buttonFooterHover" href="https://www.aaup.org/" target="_blank">Visit AAUP</a>
+          <a class="buttonFooter buttonFooter2 buttonFooterHover" href="https://aaupcolorado.org/" target="_blank">Visit AAUP of Colorado</a>
           <div style="color: #6b7b8b; margin-right: 10px; width: 300px; float: right;">
+		   <span style="color: white; float: left;"><span style="color: #6b7b8b;">Email:</span> aaup@mines.edu</span>
             <div style=" float: right;">
               <p>Follow AAUP</p>
               <div style=" float: right;">
-                <a href="https://www.facebook.com/AAUPNational/"><img src="assets/Images/facebook-icon.png" style="width: 50px; height: 50px;"></a>
-                <a href= "https://twitter.com/AAUP?ref_src=twsrc%5Egoogle%7Ctwcamp%5Eserp%7Ctwgr%5Eauthor"><img src="assets/Images/twitter-icon.png" style="width: 50px; height: 50px;"></a>
+                <a href="https://www.facebook.com/AAUPNational/" target="_blank"><img src="assets/Images/facebook-icon.png" style="width: 50px; height: 50px;"></a>
+                <a href= "https://twitter.com/AAUP?ref_src=twsrc%5Egoogle%7Ctwcamp%5Eserp%7Ctwgr%5Eauthor" target="_blank"><img src="assets/Images/twitter-icon.png" style="width: 50px; height: 50px;"></a>
               </div>
             </div>
           </div>
