--- a/our_purpose.html
+++ b/our_purpose.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="UTF-8">
-  <title>CSM AAUP</title>
+  <title>Colorado School of Mines AAUP</title>
 
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
@@ -42,7 +42,7 @@
           <!-- NEWS AND EVENTS -->
           <li class="dropdown"><a class="btn-lg btn-link dropdown-toggle " data-toggle="dropdown" href="#" style="background-color: #425262; margin-right: 50px;"><b>News + Events</b></a>
             <ul class="dropdown-menu" style="margin-left: 15px;">
-              <li><a tabindex="-1" href="https://www.aaup.org/news/aaup-news">News</a></li>
+              <li><a tabindex="-1" href="https://www.aaup.org/news/aaup-news" target="_blank">News</a></li>
               <li><a tabindex="-1" href="events.html">Events</a></li>
             </ul>
           </li>
@@ -55,8 +55,8 @@
                   <div class="dropdown-divider"></div>
                   <a style="padding-left: 50px;"><b>External Links</b></a>
                   <div class="dropdown-divider"></div>
-                  <li><a tabindex="-1" href="https://aaupcolorado.org/constitution-2/">AAUP Colorado Constitution</a></li>
-                  <li><a tabindex="-1" href="https://www.aaup.org/about/organization/aaup-constitution">AAUP National Constitution</a></li>
+                  <li><a tabindex="-1" href="https://aaupcolorado.org/constitution-2/" target="_blank">AAUP Colorado Constitution</a></li>
+                  <li><a tabindex="-1" href="https://www.aaup.org/about/organization/aaup-constitution" target="_blank">AAUP National Constitution</a></li>
                 </ul>
               </li>
               <li class="dropdown-submenu">
@@ -65,9 +65,9 @@
                   <div class="dropdown-divider"></div>
                   <a style="padding-left: 50px;"><b>External Links</b></a>
                   <div class="dropdown-divider"></div>
-                  <li class="disabled"><a tabindex="-1" href="https://www.aaup.org/about/organization/aaup-constitution">CSM Bylaws (Coming Soon)</a></li>
-                  <li><a tabindex="-1" href="https://www.aaup.org/get-involved/start-chapter/sample-bylaws">Sample Bylaws</a></li>
-                  <li><a tabindex="-1" href="https://www.aaup.org/about/organization/aaup-constitution">AAUP National Constitution</a></li>
+                  <li class="disabled"><a tabindex="-1" href="https://www.aaup.org/about/organization/aaup-constitution" target="_blank">Mines Bylaws (Coming Soon)</a></li>
+                  <li><a tabindex="-1" href="https://www.aaup.org/get-involved/start-chapter/sample-bylaws" target="_blank">Sample Bylaws</a></li>
+                  <li><a tabindex="-1" href="https://www.aaup.org/about/organization/aaup-constitution" target="_blank">AAUP National Constitution</a></li>
                 </ul>
               </li>
               <li class="dropdown-submenu">
@@ -76,10 +76,10 @@
                   <div class="dropdown-divider"></div>
                   <a style="padding-left: 50px;"><b>External Links</b></a>
                   <div class="dropdown-divider"></div>
-                  <li><a tabindex="-1" href="https://aaupcolorado.org/law/">law on Non-Tenure Track Teaching Contracts</a></li>
-                  <li><a tabindex="-1" href="https://www.nlrb.gov/resources/national-labor-relations-act">National Labor Relations Act</a></li>
-                  <li><a tabindex="-1" href="https://www.aaup.org/issues-higher-education">AAUP Issues in Higher Education</a></li>
-                  <li><a tabindex="-1" href="https://www.aaup.org/our-programs">AAUP Programs</a></li>
+                  <li><a tabindex="-1" href="https://aaupcolorado.org/law/" target="_blank">law on Non-Tenure Track Teaching Contracts</a></li>
+                  <li><a tabindex="-1" href="https://www.nlrb.gov/resources/national-labor-relations-act" target="_blank">National Labor Relations Act</a></li>
+                  <li><a tabindex="-1" href="https://www.aaup.org/issues-higher-education" target="_blank">AAUP Issues in Higher Education</a></li>
+                  <li><a tabindex="-1" href="https://www.aaup.org/our-programs" target="_blank">AAUP Programs</a></li>
                 </ul>
               </li>
               <li class="dropdown-submenu">
@@ -88,13 +88,13 @@
                   <div class="dropdown-divider"></div>
                   <a style="padding-left: 50px;"><b>External Links</b></a>
                   <div class="dropdown-divider"></div>
-                  <li><a tabindex="-1" href="https://www.aaup.org/">AAUP - National</a></li>
-                  <li><a tabindex="-1" href="https://www.aaup.org/reports-publications/journal-academic-freedom">AAUP Journal of Academic Freedom</a></li>
-                  <li><a tabindex="-1" href="http://portfolio.du.edu/aaup">University Of Denver Chapter</a></li>
-                  <li><a tabindex="-1" href="https://aaupcsu.org/">Colorado State University - Fort Collins Chapter</a></li>
-                  <li><a tabindex="-1" href="https://sites.google.com/site/coloradoadjunctswiki/">Colorado Community College Chapter</a></li>
-                  <li><a tabindex="-1" href="http://aaup-msudenver.org/">Metropolitan State University Chapter</a></li>
-                  <li><a tabindex="-1" href="http://www.cu-aaup.org/">University of Colorado- Boulder Chapter</a></li>
+                  <li><a tabindex="-1" href="https://www.aaup.org/" target="_blank">AAUP - National</a></li>
+                  <li><a tabindex="-1" href="https://www.aaup.org/reports-publications/journal-academic-freedom" target="_blank">AAUP Journal of Academic Freedom</a></li>
+                  <li><a tabindex="-1" href="http://portfolio.du.edu/aaup" target="_blank">University Of Denver Chapter</a></li>
+                  <li><a tabindex="-1" href="https://aaupcsu.org/" target="_blank">Colorado State University - Fort Collins Chapter</a></li>
+                  <li><a tabindex="-1" href="https://sites.google.com/site/coloradoadjunctswiki/" target="_blank">Colorado Community College Chapter</a></li>
+                  <li><a tabindex="-1" href="http://aaup-msudenver.org/" target="_blank">Metropolitan State University Chapter</a></li>
+                  <li><a tabindex="-1" href="http://www.cu-aaup.org/" target="_blank">University of Colorado- Boulder Chapter</a></li>
                 </ul>
               </li>
             </ul>
@@ -102,7 +102,7 @@
           <!-- WHO WE ARE -->
           <li class="dropdown"><a class="btn-lg btn-link dropdown-toggle " data-toggle="dropdown" href="#" style="background-color: #D2492A; margin-right: 50px;"><b>Who We Are</b></a>
             <ul class="dropdown-menu" style="margin-left: 15px;">
-              <li><a tabindex="-1" href="leaders.html">CSM AAUP Leadership</a></li>
+              <li><a tabindex="-1" href="leaders.html">Mines AAUP Leadership</a></li>
               <li><a tabindex="-1" href="our_purpose.html">Our Purpose</a></li>
             </ul>
           </li>
@@ -110,7 +110,7 @@
           <li class="dropdown"><a class="btn-lg btn-link dropdown-toggle " data-toggle="dropdown" href="#" style="background-color: #425262;"><b>Membership</b></a>
             <ul class="dropdown-menu" style="margin-left: 15px;">
 			  <li><a tabindex="-1" href="join_aaup.html">Why Join Us?</a></li>
-              <li><a tabindex="-1" href="https://www.aaup.org/membership/join">Join AAUP</a></li>
+              <li><a tabindex="-1" href="https://www.aaup.org/membership/join" target="_blank">Join AAUP</a></li>
             </ul>
           </li>
         </ul>
@@ -125,7 +125,7 @@
         <div class="col-lg-12">
           <div class="testGradient">
             <h1 class="page-header" style="padding-left: 50px; font-size: 40px; font-family: 'Play', sans-serif;">
-						<span style = "font-size: 70px; font-weight: 900; color: #830303;"><b><i>CSM AAUP</i></b></span>
+						<span style = "font-size: 70px; font-weight: 900; color: #830303;"><b><i>MINES AAUP</i></b></span>
 						<small>Our Purpose</small>
 					</h1>
           </div>
@@ -133,13 +133,13 @@
       </div>
       <!-- Project One -->
       <div class="row">
-        <div class="col-md-12">
+        <div class="col-md-8">
           <div style="margin-left: 50px; ">
             <div class="headerGradient" style="padding: 50px; padding-left: 50px; border-radius: 25px; color:black;">
               <h2> AAUP Serves All Faculty </h2>
               <br><br>
               <p style="font-size: 15px;">
-                CSM has a recognized Chapter of AAUP – one of more than 500 local groups that serve accredited colleges and universities. We promote basic academic freedom, quality education, and other core AAUP principles and belong to the Colorado Conference (https://aaupcolorado.org/).
+                Colorado School of Mines has a recognized Chapter of AAUP – one of more than 500 local groups that serve accredited colleges and universities. We promote basic academic freedom, quality education, and other core AAUP principles and belong to the Colorado Conference (https://aaupcolorado.org/).
                 We encourage you to learn more about AAUP and become a member. Regardless of formal membership, however, you are welcome to participate in our Chapter activities. We serve the needs of all faculty and academic professionals, post‐doctoral
                 fellows, and graduate students engaged in teaching and research and you can reach us by direct contact with any of the Chapter officers, or privately through our “Need Help” service.
                 <br><br><br><br>
@@ -147,6 +147,9 @@
             </div>
           </div>
         </div>
+		<div class="col-md-4">
+		<img src="assets/Images/teacher_group.jpg" style = "width: 90%; max-width: 400px; ">
+		</div>
       </div>
   </div>
   </section>
@@ -157,18 +160,19 @@
         <div class="col-xs-7">
           <img src="assets/Images/aaup_nav.png" style="width:195.5px; height: 68px; float: left;" />
           <p style="float:left; position: relative; margin-left: 10px; color: #92a2bd;">
-            Colorado School of Mines <br> C/O Wendy Harrison<br> AAUP Chapter <br> 1500 Illinois Street <br> Golden, CO 80401 <br> Phone: 202-737-5900 <br><br> <span style="color: red; ">aaup@mines.edu</span>
+            Colorado School of Mines <br> C/O Wendy Harrison<br> AAUP Chapter <br> 1500 Illinois Street <br> Golden, CO 80401 <br> Phone: 303-737-5900
           </p>
         </div>
         <div class="col-xs-5" style=" background-color: clear; margin-top: 0px;">
-          <a class="buttonFooter buttonFooter1 buttonFooterHover" href="https://www.aaup.org/">Visit AAUP</a>
-          <a class="buttonFooter buttonFooter2 buttonFooterHover" href="https://aaupcolorado.org/">Visit AAUP of Colorado</a>
+          <a class="buttonFooter buttonFooter1 buttonFooterHover" href="https://www.aaup.org/" target="_blank">Visit AAUP</a>
+          <a class="buttonFooter buttonFooter2 buttonFooterHover" href="https://aaupcolorado.org/" target="_blank">Visit AAUP of Colorado</a>
           <div style="color: #6b7b8b; margin-right: 10px; width: 300px; float: right;">
+		   <span style="color: white; float: left;"><span style="color: #6b7b8b;">Email:</span> aaup@mines.edu</span>
             <div style=" float: right;">
               <p>Follow AAUP</p>
               <div style=" float: right;">
-                <a href="https://www.facebook.com/AAUPNational/"><img src="assets/Images/facebook-icon.png" style="width: 50px; height: 50px;"></a>
-                <a href= "https://twitter.com/AAUP?ref_src=twsrc%5Egoogle%7Ctwcamp%5Eserp%7Ctwgr%5Eauthor"><img src="assets/Images/twitter-icon.png" style="width: 50px; height: 50px;"></a>
+                <a href="https://www.facebook.com/AAUPNational/" target="_blank"><img src="assets/Images/facebook-icon.png" style="width: 50px; height: 50px;"></a>
+                <a href= "https://twitter.com/AAUP?ref_src=twsrc%5Egoogle%7Ctwcamp%5Eserp%7Ctwgr%5Eauthor" target="_blank"><img src="assets/Images/twitter-icon.png" style="width: 50px; height: 50px;"></a>
               </div>
             </div>
           </div>
