message box is fully functional! Emails will go to aaupmines@gmail.com until further notice

--- a/index.html
+++ b/index.html
@@ -181,23 +181,25 @@
             <br><br>
             <p> You are also welcome to join the meetings for Faculty Senate. The Faculty Senate promotes cooperation and understanding among the various constituencies that comprise the school.</p>
 			<p>Click <a href="http://facultysenate.mines.edu/" target="_blank"><u>Here (Faculty Senate Page)</u></a>for more information!</p>
+      <!-- CONTACT US FORUM START -->
             <div id="id01" class="modal" style="background-color: none;">
-              <form class="modal-content animate">
+              <form class="modal-content animate" action="https://formspree.io/aaupmines@gmail.com" method="POST">
                 <div class="container containerBorder">
                   <div class="imgcontainer">
                     <span onclick="document.getElementById('id01').style.display='none'" class="close" title="Close Modal">&times</span>
                   </div>
-                  <label><b>Tell Us What We Can Help You With:</b></label>
-                  <textarea class="form-control" id="exampleTextarea" placeholder="Write your message here" rows="1"></textarea>
+                  <label><b>Tell us what we can help you with:</b></label>
+                  <input name="Title:" class="form-control" id="exampleTextarea" placeholder="Write a brief description here (title)" rows="1"></input>
 
                   <div class="form-group textAreaHeight">
-                    <label for="exampleTextarea">Your Message:</label>
-                    <textarea class="form-control" id="exampleTextarea" placeholder="Write your message here" rows="5"></textarea>
+                    <label for="exampleTextarea">Your message:</label>
+                    <textarea class="form-control" id="exampleTextarea" name="Message:" placeholder="Note: All messages sent are anonymous. Names are optional!" rows="5"></textarea>
                   </div>
-                  <button type="submit" class="submittButton">Submit</button>
+                  <button type="submit" class="submittButton" type="submit" value="Send">Submit</button>
                 </div>
               </form>
             </div>
+            <!-- CONTACT US FORUM END -->
           </div>
         </div>
         <div class="row" style="margin-top:25px; margin-left:25px; margin-right:25px; margin-bottom:25px; ">
