added calander functionality to aaupmines@gmail.com

--- a/events.html
+++ b/events.html
@@ -129,8 +129,7 @@
           </div>
         </div>
       </div>
-      <iframe src="https://calendar.google.com/calendar/embed?title=AAUP%20Events&amp;height=700&amp;wkst=1&amp;bgcolor=%23ffffff&amp;src=mymail.mines.edu_hhlcchteheru4s5qfljptert28%40group.calendar.google.com&amp;color=%23182C57&amp;ctz=America%2FDenver" style="border:solid; border-width: 5px 0px 0px 25px; border-color: white; border-radius: 25px 0px 0px 0px;"
-        width="1000" height="600" frameborder="0" scrolling="no"></iframe>
+        <iframe src="https://calendar.google.com/calendar/embed?title=AAUP%20Mines%20Events&amp;height=600&amp;wkst=1&amp;bgcolor=%23FFFFFF&amp;src=aaupmines%40gmail.com&amp;color=%231B887A&amp;ctz=America%2FDenver" style="border:solid; border-width: 5px 0px 0px 25px; border-color: white; border-radius: 25px 0px 0px 0px;" width="1000" height="600" frameborder="0" scrolling="no"></iframe>
     </section>
   </div>
 
