Added temporary alert for the Mines Chapter fall meeting on November 9.

--- a/index.html
+++ b/index.html
@@ -23,6 +23,12 @@
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.6/js/bootstrap.min.js" integrity="sha384-vBWWzlZJ8ea9aCX4pEW3rVHjgjt7zpkNpZk+02D9phzyeVkE+jo0ieGizqPLForn" crossorigin="anonymous"></script>
 </head>
 <body id="grad1">
+  <div class="alert alert-info alert-dismissable fade in" style="width: 100%; height: auto; position: absolute; z-index: 1; text-align: center;">
+    <a href="#" class="close" data-dismiss="alert" aria-label="close">&times;</a>
+    <strong>Important News:</strong> Our Fall Meeting of Mines Chapter of AAUP will be held on <strong>Thursday November 9, 4-5PM in the Boettcher Room of Arthur Lakes Library</strong>!
+    Come join us for a presentation led by University Librarian Carol Smith on <em>"History of the Faculty and Shared Governance in the United States"</em> as well as important information regarding
+    our AAUP Chapter.
+  </div>
   <div id="fb-root"></div>
   <div class="light-blue" style="margin-bottom: -20px;">
     <nav class="navbar">
